--- a/tests/Dockerfile.amazon_2023
+++ b/tests/Dockerfile.amazon_2023
@@ -2,5 +2,5 @@
 
 FROM amazonlinux:2023
 RUN yum install -q -y systemd
-COPY test/chrony /etc/default/chrony
-COPY test/chronyd /etc/sysconfig/chronyd
+COPY chrony /etc/default/chrony
+COPY chronyd /etc/sysconfig/chronyd
