--- a/tests/Dockerfile.debian_bullseye
+++ b/tests/Dockerfile.debian_bullseye
@@ -4,5 +4,5 @@ FROM debian:bullseye
 RUN apt-get update
 RUN apt-get install -y systemd systemd-sysv dbus dbus-user-session init
 RUN ln -sf /lib/systemd/systemd /usr/sbin/init
-COPY test/chrony /etc/default/chrony
-COPY test/chronyd /etc/sysconfig/chronyd
+COPY chrony /etc/default/chrony
+COPY chronyd /etc/sysconfig/chronyd
