--- a/tests/Dockerfile.oel_8
+++ b/tests/Dockerfile.oel_8
@@ -3,5 +3,5 @@
 FROM oraclelinux:8
 RUN yum update -y
 RUN yum install -q -y systemd
-COPY test/chrony /etc/default/chrony
-COPY test/chronyd /etc/sysconfig/chronyd
+COPY chrony /etc/default/chrony
+COPY chronyd /etc/sysconfig/chronyd
