--- a/tests/Dockerfile.rocky_9
+++ b/tests/Dockerfile.rocky_9
@@ -3,5 +3,5 @@
 FROM rockylinux:9
 RUN yum update -y
 RUN yum install -q -y systemd
-COPY test/chrony /etc/default/chrony
-COPY test/chronyd /etc/sysconfig/chronyd
+COPY chrony /etc/default/chrony
+COPY chronyd /etc/sysconfig/chronyd
