--- a/tests/Dockerfile.ubuntu_focal
+++ b/tests/Dockerfile.ubuntu_focal
@@ -3,5 +3,5 @@
 FROM ubuntu:focal
 RUN apt-get update
 RUN apt-get install -y systemd systemd-sysv dbus dbus-user-session
-COPY test/chrony /etc/default/chrony
-COPY test/chronyd /etc/sysconfig/chronyd
+COPY chrony /etc/default/chrony
+COPY chronyd /etc/sysconfig/chronyd
