--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,10 +1,14 @@
 [bumpversion]
 current_version = 0.1.43
-commit = True
-tag = True
-message = 'Version {new_version}'
+commit = False
+tag = False
+message = Version {new_version}
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
 serialize = 
 	{major}.{minor}.{patch}
 
 [bumpversion:file:./pyhostprep/__init__.py]
+
+[bumpversion:file:README.md]
+
+[bumpversion:file:VERSION]
