--- a/pyhostprep/data/playbooks/install_libcouchbase_apt.yaml
+++ b/pyhostprep/data/playbooks/install_libcouchbase_apt.yaml
@@ -21,4 +21,5 @@
           - libcouchbase-dbg
           - libcouchbase3-libev
           - libcouchbase3-libevent
+          - zip
         state: latest
