--- a/pyhostprep/data/playbooks/install_libcouchbase_yum.yaml
+++ b/pyhostprep/data/playbooks/install_libcouchbase_yum.yaml
@@ -16,4 +16,5 @@
           - libcouchbase3
           - libcouchbase-devel
           - libcouchbase3-tools
+          - zip
         state: latest
