--- a/pyhostprep/data/playbooks/base_sw_amzn.yaml
+++ b/pyhostprep/data/playbooks/base_sw_amzn.yaml
@@ -29,6 +29,7 @@
           - net-tools
           - chrony
           - procps
+          - zip
         state: latest
 - hosts: localhost
   gather_facts: no
