--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ docker>=5.0.3
 ansible>=6.7.0
 ansible-runner>=2.3.3
 requests>=2.31.0
-urllib3==1.26.16
+urllib3>=1.26.18
 overrides>=7.4.0
 bumpversion>=0.6.0
 psutil>=5.9.5
 cbcmgr>=2.1.5
-Jinja2>=3.0.3
+Jinja2>=3.1.3
