--- a/powershell/SQLServerInstall.ini
+++ b/powershell/SQLServerInstall.ini
@@ -18,4 +18,6 @@ NPENABLED="1"
 ; SysAdmin Password
 SAPWD="SysAdminPasswordGoesHere"
 IACCEPTSQLSERVERLICENSETERMS="True"
-FEATURES="SQLEngine,Replication"
+FEATURES="SQLEngine"
+ACTION=INSTALL
+INSTALLSQLDATADIR=E:\
