--- a/powershell/SQLServerInstall.ini
+++ b/powershell/SQLServerInstall.ini
@@ -125,7 +125,7 @@ SQLSYSADMINACCOUNTS="adminuser"
 ; The default is Windows Authentication. Use "SQL" for Mixed Mode Authentication.
 
 SECURITYMODE="SQL"
-SAPWD="password"
+SAPWD="Password123"
 
 ; The number of Database Engine TempDB files.
 
