--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,2 +1,6 @@
 [pytest]
-addopts = -rP --no-header -v -p no:warnings
+addopts = -rE --no-header -v -x -p no:warnings
+log_file = pytest.log
+log_file_level = DEBUG
+asyncio_mode = auto
+asyncio_default_fixture_loop_scope = session
